objects/DP_Picklist__c.object
<CustomObject>
    <description>The Picklist custom object will contain the list of available dynamic picklists.  The Alpha Sort attribute is TRUE if the items are sorted alphabetically.  When FALSE, the sort order must be specified in the PicklistEntry custom object.</description>
    <fields>
        <fullName>Alpha_Sort__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to TRUE if the list items should be alphabetically sorted</inlineHelpText>
        <label>Alpha Sort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person who is most knowledgeable about this picklist</inlineHelpText>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Picklists</relationshipLabel>
        <relationshipName>Picklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <inlineHelpText>Text to be optionally used along with the picklist</inlineHelpText>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_CR__c</fullName>
        <label>Original CR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Picklist</label>
    <nameField>
        <label>Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklists</pluralLabel>
    <recordTypes>
        <fullName>Dynamic_Picklist</fullName>
        <active>true</active>
        <label>Dynamic Picklist</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>